-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 14, 15
-
Component/s: hotspot
-
b27
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8248081 | 16 | Zhengyu Gu | P4 | Resolved | Fixed | team |
String deduplication roots can be scanned during concurrent phase to further reduce init-mark pause.
- backported by
-
JDK-8248081 Shenandoah: move string dedup roots scanning to concurrent phase
-
- Resolved
-
- relates to
-
JDK-8253222 Shenandoah: unused AlwaysTrueClosure after JDK-8246591
-
- Resolved
-