8246591: Shenandoah: move string dedup roots scanning to concurrent phase

Reviewed-by: shade