src/hotspot/share/gc/shenandoah/shenandoahRootProcessor.hpp
@@ -261,7 +261,6 @@ class ShenandoahRootScanner : public ShenandoahRootProcessor {
 private:
   ShenandoahSerialRoots                                     _serial_roots;
   ShenandoahThreadRoots                                     _thread_roots;
-  ShenandoahStringDedupRoots                                _dedup_roots;
 
 public:
   ShenandoahRootScanner(uint n_workers, ShenandoahPhaseTimings::Phase phase);
@@ -284,6 +283,7 @@ private:
   ShenandoahVMRoots<CONCURRENT>            _vm_roots;
   ShenandoahClassLoaderDataRoots<CONCURRENT, false /* single-threaded*/>
                                            _cld_roots;
+  ShenandoahConcurrentStringDedupRoots     _dedup_roots;
   ShenandoahNMethodTableSnapshot*          _codecache_snapshot;
   ShenandoahPhaseTimings::Phase            _phase;
 
